--- a/docker-image/v1.12/debian-elasticsearch6/Gemfile
+++ b/docker-image/v1.12/debian-elasticsearch6/Gemfile
@@ -19,3 +19,4 @@ gem "fluent-plugin-elasticsearch", "~> 4.0.9"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.6.0"
 gem "ffi"
 gem "fluent-plugin-systemd", "~> 1.0.2"
+gem "fluent-plugin-mail"
